feat(message): 添加消息中心功能实现
- 新增 MessageNoticeCreateDTO 数据传输对象
- 在 UserFeignApi 中添加消息相关接口定义
- 实现 UserFeignFallbackFactory 的消息接口降级处理
- 配置网关路由支持消息服务和 WebSocket 连接
- 添加 MessageController 提供完整的消息中心 API
- 定义 MessageNotice 和 MessagePrivate 实体类
- 创建 MessageNoticeDTO 和 MessagePrivateDTO 数据传输对象
- 实现 MessageService 接口和 MessageServiceImpl 业务逻辑
- 添加消息私信、通知、会话等核心功能
- 实现 WebSocket 消息推送机制
- 完善消息的增删改查和实时推送功能